5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1863_2218.log
== TEST (2019-07-02 10:31:56) 
-- CODE:
from numpy import*
v = array(eval(float(input("matrix: ")))
-- ERROR:
File "XXXX", line 3
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:33:04) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: "),dtype=float)
-- ERROR:
File "XXXX", line 3
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:33:46) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: "))dtype=float)
-- ERROR:
File "XXXX", line 2
    v = array(eval(input())dtype=float)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:34:05) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: "))dtype:float)
-- ERROR:
File "XXXX", line 2
    v = array(eval(input())dtype:float)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:34:35) 
-- CODE:
from numpy import*
v = array(eval(float(input("matrix: "))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:37:31) 
-- CODE:
from numpy import*
v = array(float(eval(input("matrix: "))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:37:55) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:38:15) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:41:10) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
m = 0
for i in range(3):
	for j in range(3):
		if(j>i):
			m = m+v[i,j]
print(m)
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:41:26) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
m = 0
for i in range(3):
	for j in range(3):
		if(j>i):
			m = m+v[i,j]
print(m)
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:42:09) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
m = 0
for i in range(3):
	for j in range(3):
		if(j>i):
			m = m+v[i,j]
print(round(m, 2))
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:42:33) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
m = 0
for i in range(3):
	for j in range(3):
		if(j>i):
			m = m+v[i,j]
print(round(m, 2))
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:42:43) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
m = 0
for i in range(3):
	for j in range(3):
		if(j>i):
			m = m+v[i,j]
print(round(m, 2))
		
		

-- EXECUTION TIME:
1.01642
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.38
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
246.1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:47:14) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))

n = zeros(3)
x = 0
for i in range(3):
	for j in range(3):
		if(j>i):
			n[x]=v[i,j]
			x=x+1
r = sum(n)
print(round(r, 2))
			
			
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:47:30) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))

n = zeros(3)
x = 0
for i in range(3):
	for j in range(3):
		if(j>i):
			n[x]=v[i,j]
			x=x+1
r = sum(n)
print(round(r, 2))
			
			
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:47:39) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))

n = zeros(3)
x = 0
for i in range(3):
	for j in range(3):
		if(j>i):
			n[x]=v[i,j]
			x=x+1
r = sum(n)
print(round(r, 2))
			
			
		
		

-- EXECUTION TIME:
1.20731
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.38
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
246.1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:49:53) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
if(size(v)[0]==3 and size(v)[1]==3):
	n = zeros(3)
	x = 0
	for i in range(3):
		for j in range(3):
			if(j>i):
				n[x]=v[i,j]
				x=x+1
	r = sum(n)
	print(round(r, 2))
			
			
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:51:31) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
if(shape(v)[0]==3 and shape(v)[1]==3):
	n = zeros(3)
	x = 0
	for i in range(3):
		for j in range(3):
			if(j>i):
				n[x]=v[i,j]
				x=x+1
	r = sum(n)
	print(round(r, 2))
			
			
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:51:44) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
if(shape(v)[0]==3 and shape(v)[1]==3):
	n = zeros(3)
	x = 0
	for i in range(3):
		for j in range(3):
			if(j>i):
				n[x]=v[i,j]
				x=x+1
	r = sum(n)
	print(round(r, 2))
			
			
		
		

-- EXECUTION TIME:
0.855098
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.38
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:52:24) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
if(shape(v)[0]==3 and shape(v)[1]==3):
	n = zeros(3)
	x = 0
	for i in range(3):
		for j in range(3):
			if(j>i):
				n[x]=v[i,j]
				x=x+1
	r = sum(n)
	print(round(r, 2))
			
			
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:53:26) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
if(shape(v)[0]==3 and shape(v)[1]==3):
	n = zeros(3)
	x = 0
	for i in range(3):
		for j in range(3):
			if(j>i):
				n[x]=v[i,j]
				x=x+1
	r = sum(n)
	print(round(r, 3))
			
			
		
		

-- EXECUTION TIME:
1.13369
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
matrix: 14.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
matrix: 1.38
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
matrix:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:53:36) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
if(shape(v)[0]==3 and shape(v)[1]==3):
	n = zeros(3)
	x = 0
	for i in range(3):
		for j in range(3):
			if(j>i):
				n[x]=v[i,j]
				x=x+1
	r = sum(n)
	print(round(r, 2))
			
			
		
		

-- EXECUTION TIME:
1.19543
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
matrix: 14.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
matrix: 1.38
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
matrix:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:53:48) 
-- CODE:
from numpy import*
v = array(eval(input("matrix: ")))
if(shape(v)[0]==3 and shape(v)[1]==3):
	n = zeros(3)
	x = 0
	for i in range(3):
		for j in range(3):
			if(j>i):
				n[x]=v[i,j]
				x=x+1
	r = sum(n)
	print(round(r, 2))
			
			
		
		

-- EXECUTION TIME:
1.1856
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.38
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
